--- a/templates/web/attract.html.twig
+++ b/templates/web/attract.html.twig
@@ -36,7 +36,7 @@
         <title>MyHordes</title>
     {% endblock %}
 </head>
-<body onclick class="offline_body">
+<body onclick class="offline_body page-attract">
 <div id="wrapper" class="attract">
     <div id="header">
         <div class="deco_logo pointer"></div>
