--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -53,7 +53,7 @@
                                             <img alt="{{ 'Tot!'|trans({},'game') }}" src="{{ asset('build/images/icons/home_recycled.gif') }}" />
                                         {% endif %}
                                     {% endif %}
-                                    <a class="username undecorated">{{ 'Mysteriöser Fremder'|trans({}, 'game') }}</a>
+                                    <a class="username undecorated" style="word-break: break-word">{{ 'Mysteriöser Fremder'|trans({}, 'game') }}</a>
                                 </div>
                                 <div class="hide-desktop small-citizen-defense">
                                     {% if town.strangerPower > 0 %}
