--- a/templates/ajax/public/intro.html.twig
+++ b/templates/ajax/public/intro.html.twig
@@ -99,6 +99,9 @@
     {{ parent() }}
     <script>
         (()=>{
+            if (!document.body.classList.contains('page-attract'))
+                window.location.href = $.ajax.getBaseURL();
+
             let currentFocusImg = null;
             let currentBackDrop = null;
             $.html.addEventListenerAll('.preview-images img', 'click', (e,elem) => {
