--- a/templates/ajax/admin/users/ban.html.twig
+++ b/templates/ajax/admin/users/ban.html.twig
@@ -92,7 +92,26 @@
                                     </div>
                                     <div class="cell rw-2 padded"><span class="small">{{ restriction.created|format_datetime('medium', 'short') }}</span></div>
                                     <div class="cell rw-2 padded">
-                                        {% if restriction.originalDuration < 0 %}<b>∞</b>{% else %}{{ '{d} Tage'|trans({'{d}': (restriction.originalDuration/86400)|round},'admin') }}{% endif %}
+                                        {% if is_granted('ROLE_ADMIN') and restriction.active %}
+                                            <span class="small pointer" data-toggle-duration-for="{{ restriction.id }}">
+                                                {% if restriction.originalDuration < 0 %}<b>∞</b>{% else %}{{ '{d} Tage'|trans({'{d}': (restriction.originalDuration/86400)|round},'admin') }}{% endif %}
+                                            </span>
+                                            <label class="hidden" data-duration-for="{{ restriction.id }}">
+                                                <select data-update-url="{{ path('admin_users_ban_modify', {bid: restriction.id, uid: user.id}) }}">
+                                                    <option {{ restriction.originalDuration == 86400 ? 'selected' : '' }} value="86400">{{ '24 Stunden'|trans({},'admin') }}</option>
+                                                    {% for duration in [2,3,5,7,15,30,60,90,120,240] %}
+                                                        <option {{ restriction.originalDuration == duration * 86400 ? 'selected' : '' }} value="{{ duration * 86400 }}">{{ '{d} Tage'|trans({'{d}': duration},'admin') }}{% if duration > 30 and not is_granted('ROLE_ADMIN') %} ({{ 'Bestätigung erforderlich'|trans({},'admin') }}){% endif %}</option>
+                                                    {% endfor %}
+                                                    <option {{ restriction.originalDuration == 31536000 ? 'selected' : '' }} value="31536000">{{ '1 Jahr'|trans({},'admin') }}{% if not is_granted('ROLE_ADMIN') %} ({{ 'Admin-Bestätigung erforderlich'|trans({},'admin') }}){% endif %}</option>
+                                                    <option {{ restriction.originalDuration == 63072000 ? 'selected' : '' }} value="63072000">{{ '2 Jahre'|trans({},'admin') }}{% if not is_granted('ROLE_ADMIN') %} ({{ 'Admin-Bestätigung erforderlich'|trans({},'admin') }}){% endif %}</option>
+                                                    <option {{ restriction.originalDuration == -1 ? 'selected' : '' }} value="-1">{{ 'Dauerhaft'|trans({},'admin') }}{% if not is_granted('ROLE_ADMIN') %} ({{ 'Admin-Bestätigung erforderlich'|trans({},'admin') }}){% endif %}</option>
+                                                </select>
+                                            </label>
+                                        {% else %}
+                                            <span class="small">
+                                                {% if restriction.originalDuration < 0 %}<b>∞</b>{% else %}{{ '{d} Tage'|trans({'{d}': (restriction.originalDuration/86400)|round},'admin') }}{% endif %}
+                                            </span>
+                                        {% endif %}
                                     </div>
                                     <div class="cell rw-2 padded">
                                         {% if restriction.originalDuration > 0 and restriction.expires is not null %}<span class="small">{{ restriction.expires|format_datetime('medium', 'short') }}</span>{% endif %}
@@ -195,6 +214,17 @@
 
             $.html.addEventListenerAll('input[type="checkbox"][x-confirmation]', 'click', check_confirmation_level);
             $.html.addEventListenerAll('select[x-confirmation]', 'change', check_confirmation_level);
+
+            $.html.addEventListenerAll('[data-toggle-duration-for]', 'click', (e,elem) => {
+                document.querySelectorAll('[data-duration-for="' + elem.dataset.toggleDurationFor + '"]').forEach( cb => cb.classList.remove('hidden') );
+                elem.classList.add('hidden');
+            } )
+
+            $.html.addEventListenerAll('select[data-update-url]', 'change', (e,elem) => {
+                if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                    return;
+                $.ajax.easySend(elem.dataset.updateUrl, {duration: elem.value}, () => $.ajax.load(null,"{{ path('admin_users_ban_view', {id: user.id}) }}"));
+            })
 
             const get_restriction_mask = function(){
                 let rm = 0;
