--- a/templates/ajax/admin/reports/reports.html.twig
+++ b/templates/ajax/admin/reports/reports.html.twig
@@ -23,24 +23,24 @@
                 {% endif %}
                 <div class="row-table">
                     <div class="row header">
-                        <div class="cell rw-3 rw-sm-12 padded">{{ "Forum" |trans({}, 'admin') }}</div>
-                        <div class="cell rw-2 rw-sm-12 padded">{{ "Autor" |trans({}, 'admin') }}</div>
-                        <div class="cell rw-1 rw-sm-12 padded">#</div>
-                        <div class="cell rw-4 rw-sm-12 padded">{{ "gemeldet von" |trans({}, 'admin') }}</div>
-                        <div class="cell rw-2 rw-sm-12 padded">{{ "Aktionen" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-3 rw-md-12 padded">{{ "Forum" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-2 rw-lg-3 hide-sm hide-md padded">{{ "Autor" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-1 hide-sm hide-md hide-lg padded">#</div>
+                        <div class="cell rw-4 hide-sm hide-md padded">{{ "gemeldet von" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-2 hide-sm hide-md padded">{{ "Aktionen" |trans({}, 'admin') }}</div>
                     </div>
                     {% for post in posts %}
                         <div class="row">
-                            <div class="cell-small padded rw-6 rw-sm-24">
+                            <div class="cell padded rw-3 rw-md-6">
                                 <a href="{{path('forum_jump_view', {pid: post['post'].id})}}" target="_blank">{{ post['post'].thread.forum.title }}</a>
                             </div>
-                            <div class="cell padded rw-2 rw-sm-12">
+                            <div class="cell padded rw-2 rw-lg-3 rw-md-6">
                                 <span>{{ post['post'].owner.name }}</span>
                             </div>
-                            <div class="cell padded rw-1 rw-sm-12">
+                            <div class="cell padded rw-1 hide-sm hide-md hide-lg">
                                 <span>{{ post['count'] }}</span>
                             </div>
-                            <div class="cell padded rw-4 rw-sm-12">
+                            <div class="cell padded rw-4 rw-md-8">
                                 {% set iteration = 0 %}
                                 {% for reporter in post['reporters'] %}
                                     {% if iteration > 0 %}
@@ -51,7 +51,7 @@
                                     {% set iteration = iteration + 1 %}
                                 {% endfor %}
                             </div>
-                            <div class="cell padded rw-2 rw-sm-12 right">
+                            <div class="cell padded rw-2 rw-md-4 right">
                                 <button class="small inline" x-report-action="clear-reports" x-post-id={{ post['post'].id }}>{{ 'Gesehen'|trans({}, 'admin') }}</button>
                             </div>
                         </div>
@@ -62,26 +62,26 @@
                 <div class="row-table">
                     <div class="row header">
                         <div class="cell rw-3 rw-sm-12 padded">{{ "Titel" |trans({}, 'admin') }}</div>
-                        <div class="cell rw-2 rw-sm-12 padded">{{ "Autor" |trans({}, 'admin') }}</div>
-                        <div class="cell rw-1 rw-sm-12 padded">#</div>
-                        <div class="cell rw-4 rw-sm-12 padded">{{ "gemeldet von" |trans({}, 'admin') }}</div>
-                        <div class="cell rw-2 rw-sm-12 padded">{{ "Aktionen" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-lg-3 hide-sm hide-md padded">{{ "Autor" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-1 hide-sm hide-md hide-lg padded">#</div>
+                        <div class="cell rw-4 hide-sm hide-md padded">{{ "gemeldet von" |trans({}, 'admin') }}</div>
+                        <div class="cell rw-2 hide-sm hide-md padded">{{ "Aktionen" |trans({}, 'admin') }}</div>
                     </div>
                     {% for gpm in gpms %}
                         <div class="row">
-                            <div class="cell-small padded rw-1 hide-sm small">
+                            <div class="cell-small padded rw-1 hide-sm hide-md hide-lg small">
                                 <i class="fa fa-comments"></i>
                             </div>
-                            <div class="cell-small padded rw-5 rw-sm-24">
+                            <div class="cell-small padded rw-5 rw-lg-6 rw-md-12">
                                 <span>{{ gpm.post.receiverGroup.name }}</span>
                             </div>
-                            <div class="cell padded rw-2 rw-sm-12">
+                            <div class="cell padded rw-2 rw-lg-3 rw-md-6">
                                 <span>{{ gpm.post.sender.name }}</span>
                             </div>
-                            <div class="cell padded rw-1 rw-sm-12">
+                            <div class="cell padded rw-1 hide-sm hide-md hide-lg">
                                 <span>{{ gpm.count }}</span>
                             </div>
-                            <div class="cell padded rw-4 rw-sm-12">
+                            <div class="cell padded rw-4 rw-md-8">
                                 {% set iteration = 0 %}
                                 {% for reporter in gpm.reporters %}
                                     {% if iteration > 0 %}
@@ -92,7 +92,7 @@
                                     {% set iteration = iteration + 1 %}
                                 {% endfor %}
                             </div>
-                            <div class="cell padded rw-2 rw-sm-12 right">
+                            <div class="cell padded rw-2 rw-md-4 right">
                                 <button class="small inline" x-report-action="open-gpm-reports" x-post-id={{ gpm.post.id }}>{{ 'Öffnen'|trans({}, 'admin') }}</button>
                                 <button class="small inline" x-report-action="clear-gpm-reports" x-post-id={{ gpm.post.id }}>{{ 'Gesehen'|trans({}, 'admin') }}</button>
                             </div>
@@ -101,16 +101,16 @@
                     {% endfor %}
                     {% for pm in pms %}
                         <div class="row">
-                            <div class="cell-small padded rw-1 hide-sm small">
+                            <div class="cell-small padded rw-1 hide-sm hide-md hide-lg small">
                                 <i class="fa fa-building"></i>
                             </div>
-                            <div class="cell-small padded rw-5 rw-sm-24">
+                            <div class="cell-small padded rw-5 rw-lg-6 rw-md-12">
                                 <span>{{ pm.post.privateMessageThread.title }}</span>
                             </div>
-                            <div class="cell padded rw-2 rw-sm-12">
+                            <div class="cell padded rw-2 rw-lg-3 rw-md-6">
                                 <span>{{ pm.post.owner.name }}</span>
                             </div>
-                            <div class="cell padded rw-1 rw-sm-12">
+                            <div class="cell padded rw-1 hide-sm hide-md hide-lg">
                                 <span>{{ pm.count }}</span>
                             </div>
                             <div class="cell padded rw-4 rw-sm-12">
@@ -124,7 +124,7 @@
                                     {% set iteration = iteration + 1 %}
                                 {% endfor %}
                             </div>
-                            <div class="cell padded rw-2 rw-sm-12 right">
+                            <div class="cell padded rw-4 rw-md-8">
                                 <button class="small inline" x-report-action="open-pm-reports" x-post-id={{ pm.post.id }}>{{ 'Öffnen'|trans({}, 'admin') }}</button>
                                 <button class="small inline" x-report-action="clear-pm-reports" x-post-id={{ pm.post.id }}>{{ 'Gesehen'|trans({}, 'admin') }}</button>
                             </div>
