--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -8,6 +8,7 @@
 
 // Visual Controls
 @media (max-width: (@screen-extra-large-threshold - 1)) {
+  .hide-@{screen-extra-large} {display: none !important;};
   #post-office {
     backdrop-filter: none !important; padding: 0 !important;
     #post-office-box {
