--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -136,6 +136,7 @@
       display: block; width: 24px; height: 24px; font-size: 14px; text-align: center; box-shadow: 0 0 3px black;
     }
   }
+  #wrapper > #content #apps #apps-list ul li.app-external { width: 100% !important; }
   button, .button { padding-top: 16px; padding-bottom: 16px; margin-top: 8px; margin-bottom: 8px; }
 
   h4.preview-header { width: 100%; left: 0; padding: 4px; }
