--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -409,6 +409,7 @@ x-message {
       outline: 1px solid black;
       border: 1px solid #f0d79e;
       z-index: 100;
+      max-width: calc(100% - 20px);
 
       &:hover {
         width: 430px;
