--- a/templates/ajax/game/jobs.html.twig
+++ b/templates/ajax/game/jobs.html.twig
@@ -41,7 +41,7 @@
             <div class="row">
                 {% for job in professions %}
                     {# @var job \App\Entity\CitizenProfession #}
-                    <div class="jobs-choice padded cell rw-4 rw-lg-6 rw-sm-8 ro-sm-2">
+                    <div class="jobs-choice padded cell rw-4 rw-lg-6 rw-sm-8 ro-sm-2 pointer">
                         <div class="text center">
                             <input type="radio" id="jb_{{ job.name }}" name="job" value="{{ job.id }}">
                             <label for="jb_{{ job.name }}">
@@ -56,7 +56,7 @@
                                     {{ 'Hilfe'|trans({},'global') }}
                                 </a>
                             </div>
-                            <img alt="{{ job.label|trans({}, 'game') }}" src="{{ asset('build/images/professions/select/' ~ job.icon ~ '.gif') }}">
+                            <img class="pointer" alt="{{ job.label|trans({}, 'game') }}" src="{{ asset('build/images/professions/select/' ~ job.icon ~ '.gif') }}">
                         </label>
                         
                     </div>
