--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -131,8 +131,8 @@
                                                             </span>
                                                         {% endif %}
                                                             {% if cdm_level != 2 %}
-                                                                <a class="link undecorated" {% if joinable and (not town|whitelisted or town|whitelisted(app.user)) %}x-coa-restricted="{{ (coa is not empty and (town|whitelisted or town.password)) ? 1 : 0 }}" x-coa-discard="{{ coa|filter( member => not town|openFor(member) )|map( member => member.name )|join(';') }}" x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.getName }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>
-                                                                    {{ town.getName }}
+                                                                <a {% if joinable and (not town|whitelisted or town|whitelisted(app.user)) %}x-coa-restricted="{{ (coa is not empty and (town|whitelisted or town.password)) ? 1 : 0 }}" x-coa-discard="{{ coa|filter( member => not town|openFor(member) )|map( member => member.name )|join(';') }}" x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.name }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>
+                                                                    <span class="link">{{ town.name }}</span>
                                                                     {% if town.language != 'multi' and town.language != app.user.language %}
                                                                             <img alt="!" src="{{ asset('build/images/icons/warning_anim.gif') }}" />
                                                                             <div class="tooltip">
@@ -144,7 +144,7 @@
                                                                     {% endif %}
                                                                 </a>
                                                             {% else %}
-                                                                {{ town.getName }}
+                                                                {{ town.name }}
                                                             {% endif %}
 
                                                         {% if town.rankingEntry.event %}
