--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -400,7 +400,8 @@
                         conv_list_more = null;
                     }
 
-                    document.querySelector('#pm-conversation-list>.pm-conversation-list').innerHTML += messages.innerHTML;
+                    let target_list = document.querySelector('#pm-conversation-list>.pm-conversation-list');
+                    while (messages.firstChild) target_list.appendChild( messages.firstChild );
 
                     fun_conv_events();
                     loading_conv_list = false;
@@ -553,7 +554,8 @@
                         msg_list_more.setAttribute('x-endless-endpoint', more.getAttribute('x-endless-endpoint'));
                     }
 
-                    document.querySelector('#gpm-forum-content>ul.group-conversation').innerHTML += messages.innerHTML;
+                    let target_list = document.querySelector('#gpm-forum-content>ul.group-conversation');
+                    while (messages.firstChild) target_list.appendChild( messages.firstChild );
 
                     fun_msg_events();
                     loading_msg_list = false;
@@ -682,7 +684,10 @@
                 document.getElementById('pm-forum-editor-container').classList.remove('hidden');
                 document.getElementById('pm-forum-editor-header').innerHTML = '<i class="fa fa-spin fa-circle-notch"></i> {{ 'Wird geladen...'|trans({},'global')|e('js') }}';
 
-                list.innerHTML = '{{ _self.pm_preview(app.user)|e('js') }}' + list.innerHTML;
+                let temp = document.createElement('div');
+                temp.innerHTML = '{{ _self.pm_preview(app.user)|e('js') }}';
+                const list_fc = list.firstChild;
+                while (temp.firstChild) list.insertBefore(temp.firstChild, list_fc);
 
                 if (editor) $.ajax.background().load( editor, selected_thread.getAttribute('x-editor'), false, {}, function() {
                     document.getElementById('pm-forum-editor-header').innerText = '{{ 'Antworten'|trans({},'global')|e('js') }}';
